<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>halodi_ros2_zed_camera_streaming</name>
  <version>1.0.0</version>
  <description>ZED Camera streaming API</description>
  <maintainer email="jesper@halodi.com">Jesper Smith</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/Halodi/halodi-ros2-zed-camera-streaming</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
